Fix: Pin firebase-tools version in workflows

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,3 +16,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FAMILY_BUDGET_362EE }}'
           projectId: family-budget-362ee
+          firebaseToolsVersion: '13.7.2'
