--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,11 +12,13 @@ jobs:
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4.1.1
+      - name: Install Firebase Tools
+        run: npm install -g firebase-tools@13.7.2
+
+      - name: Write Service Account Key
+        run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FAMILY_BUDGET_362EE }}' > /tmp/service_account.json
+
       - name: Deploy to Firebase Hosting
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FAMILY_BUDGET_362EE }}'
-          channelId: live
-          projectId: family-budget-362ee
-          firebaseToolsVersion: '13.7.2'
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: /tmp/service_account.json
+        run: firebase deploy --only hosting --project family-budget-362ee --non-interactive
